[HIGHLOAD-1] make http and grpc server
